# ------------------------------------------------------------
# This file part of hcs-crypt of headcode.space
#
# The 'LICENSE.txt' file in the project root holds the software license.
# Copyright (C) 2020-2021 headcode.space e.U.  
# Oliver Maurhart <info@headcode.space>, https://www.headcode.space
# ------------------------------------------------------------


# ------------------------------------------------------------
# Workload

add_subdirectory(help)
add_subdirectory(list)
add_subdirectory(version)
